changed db table

--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -11,6 +11,16 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :restaurnat %>
+    <%= form.text_field :restaurnat %>
+  </div>
+
+  <div class="field">
+    <%= form.label :body %>
+    <%= form.text_area :body %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
