--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,6 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>Restaurnat</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +14,8 @@
   <tbody>
     <% @menus.each do |menu| %>
       <tr>
+        <td><%= menu.restaurnat %></td>
+        <td><%= menu.body %></td>
         <td><%= link_to 'Show', menu %></td>
         <td><%= link_to 'Edit', edit_menu_path(menu) %></td>
         <td><%= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></td>
